--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /*This is the font used for the site*/
 body {
-  font-family: 'Courier New', monospace, Verdana;
+  font-family: 'OCR A Std', monospace, Verdana;
 }
 
 /*This is the code for the cool typing effect for the title*/
